--- a/delicious-sweet/styles/page.module.css
+++ b/delicious-sweet/styles/page.module.css
@@ -92,20 +92,11 @@ a.secondary {
   min-width: 158px;
 }
 
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.footer img {
-  flex-shrink: 0;
+footer {
+  position:fixed;
+  bottom: 0;
+  right:0;
+  left:0;
 }
 
 /* Enable hover only on non-touch devices */
