still working on nav and home page

--- a/delicious-sweet/styles/globals.css
+++ b/delicious-sweet/styles/globals.css
@@ -44,3 +44,11 @@ a {
     color-scheme: dark;
   }
 }
+
+.pointer{
+  cursor: pointer;
+}
+
+.homeFirstBorder{
+  border-right: 0.5px solid black;
+}
