--- a/delicious-sweet/styles/globals.css
+++ b/delicious-sweet/styles/globals.css
@@ -1,18 +1,3 @@
-@import url('./pagesStyle/footer.css');
-@import url('./pagesStyle/login.css');
-@import url('./pagesStyle/register.css');
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 html,
 body {
@@ -20,18 +5,11 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  color: black;
 }
 
 a {
@@ -39,16 +17,8 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
 
 .pointer{
   cursor: pointer;
 }
 
-.homeFirstBorder{
-  border-right: 0.5px solid black;
-}
