--- a/delicious-sweet/styles/globals.css
+++ b/delicious-sweet/styles/globals.css
@@ -39,3 +39,10 @@ a {
   color: #FFAD33 !important;
   font-size: 16px !important;
 }
+
+hr{
+  background-color: rgb(214, 214, 214) !important;
+  color:rgb(214, 214, 214) !important ;
+  padding: 1px !important;
+  border-radius: 50px !important;
+}
