--- a/delicious-sweet/styles/globals.css
+++ b/delicious-sweet/styles/globals.css
@@ -35,6 +35,10 @@ a {
   color:#D68F3C
 }
 
+.textDark{
+  color: #9E7A4E;
+
+}
 /* Animations to Lines */
 .animated-underline-load {
   position: relative;
