--- a/delicious-sweet/styles/globals.css
+++ b/delicious-sweet/styles/globals.css
@@ -8,10 +8,15 @@
 @import url(pagesStyle/footer.css);
 @import url(pagesStyle/login.css);
 @import url(pagesStyle/register.css);
+@import url(pagesStyle/about.css);
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: wheat;
+}
+.container{
+  background-color: #faf6f3;
 }
 
 * {
