--- a/delicious-sweet/styles/pagesStyle/home/home.css
+++ b/delicious-sweet/styles/pagesStyle/home/home.css
@@ -14,6 +14,22 @@
   right: 40px;
 }
 
+.fifthImage{
+  height: 500px !important;
+}
+
+.fifthButton{
+background-color:#D68F3C;
+color: white; 
+font-weight: 500;
+font-size: 16px;
+position: absolute;
+bottom: 80px;
+left: 100px;
+z-index: 10;
+cursor: pointer;
+}
+
 @media screen and (max-width: 767px) {
   .homeFirstBorder::after {
     display: none;
