--- a/delicious-sweet/styles/pagesStyle/contactUs.css
+++ b/delicious-sweet/styles/pagesStyle/contactUs.css
@@ -22,7 +22,7 @@
   font-weight: 500;
   font-size: 18px;
   color: #fefefe;
-  background-color: #466ba4;
+  background-color: #D68F3C;
   font-family: "poppins";
   border: none;
 }
