--- a/delicious-sweet/styles/pagesStyle/footer.css
+++ b/delicious-sweet/styles/pagesStyle/footer.css
@@ -1,31 +1,31 @@
-footer{
-    background-color: rgb(201, 167, 77);
+footer {
+  background-color: black;
 }
-footer .container{
-    background-color: transparent;
+footer .container {
+  background-color: transparent;
 }
-footer h2{
-        font-family: "Imperial Script", cursive;
-        font-weight: 400;
-        font-style: normal;
-      
+footer h2 {
+  font-family: "Imperial Script", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+footer Link {
+  all: unset;
+}
+.footerLinks {
+  border-radius: 50%;
+  border: 1px solid white;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  font-weight: bold !important;
+  transition: 0.3s;
 }
 
-footer Link{
-    all:unset
-}
-
-footer .icons{
-    display: flex ;
-    justify-content: center;
-    align-items: center;
-    gap: 1.2rem;
-}
-
-footer .icons .icon{
-    border-radius: 50%;
-    border:1px solid  #9E7A4E;
-    color:white !important;
-    padding: 5px;
-    font-size: 2rem;
+.footerLinks:hover {
+  background-color: white;
+  color: black;
 }
