--- a/delicious-sweet/styles/globals.css
+++ b/delicious-sweet/styles/globals.css
@@ -4,10 +4,6 @@
  /* درجة فاتحة
  color:#D68F3C
  */
-
-@import url(pagesStyle/footer.css);
-@import url(pagesStyle/login.css);
-@import url(pagesStyle/register.css);
 @import url(pagesStyle/about.css);
 html,
 body {
@@ -23,7 +19,6 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  color: black;
 }
 
 a {
@@ -37,7 +32,7 @@ a {
 }
 
 .text{
-  color:#D68F3C
+  color:#D68F3C;
 }
 
 .textDark{
