--- a/delicious-sweet/styles/pagesStyle/Blog/paginations.css
+++ b/delicious-sweet/styles/pagesStyle/Blog/paginations.css
@@ -16,12 +16,12 @@
 
 .SMSSS a:hover {
   color: white !important;
-  background-image: linear-gradient(to left, #006600, #6dc81b) !important;
+  background-color: #d68f3c !important;
 }
 
 .ssf a {
   color: white !important;
-  background-image: linear-gradient(to left, #006600, #6dc81b) !important;
+  background-color: #d68f3c !important;
 }
 
 @media screen and (max-width: 991px) {
