--- a/delicious-sweet/styles/pagesStyle/Blog/secondSectionBlog.css
+++ b/delicious-sweet/styles/pagesStyle/Blog/secondSectionBlog.css
@@ -1,10 +1,10 @@
 .BlogNoti {
   font-size: 16px;
-  color: #03262c;
+  color: black;
 }
 
 .BlogGreen {
-  color: #52af15;
+  color: #D68F3C ;
   font-size: 20px;
 }
 
@@ -16,11 +16,11 @@
 
 .reeeedMore:hover{
   cursor: pointer;
-  color: #52af15;
+  color: #D68F3C ;
 }
 
 .ReadMore {
-  color: #293f73;
+  color: blue;
   font-size: 16px;
   font-family: "Roboto", serif !important;
   cursor: pointer;
