--- a/delicious-sweet/styles/pagesStyle/product/heroSectionP.css
+++ b/delicious-sweet/styles/pagesStyle/product/heroSectionP.css
@@ -1,8 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-
-* {
-  font-family: "Barlow Condensed", serif !important;
-}
 
 .productContain {
   background-color: gray;
@@ -21,7 +16,7 @@
 
 .productHeaderBTN {
   font-size: 20px;
-  background-image: linear-gradient(to left, #6dc81b, #006600);
+  background-color: #D68F3C;
   width: fit-content;
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.3);
   cursor: pointer;
