--- a/delicious-sweet/styles/pagesStyle/product/secondSectionP.css
+++ b/delicious-sweet/styles/pagesStyle/product/secondSectionP.css
@@ -1,8 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-
-* {
-  font-family: "Barlow Condensed", serif !important;
-}
 
 .over {
   height: 420px;
@@ -30,28 +25,26 @@
 
 .product-title {
   font-size: 35px;
-  color: #061738;
+  color: black;
 }
 
 .product-price {
-  color: #4caa13;
+  color: #D68F3C;
   font-size: 31px;
 }
 
 .product-description {
   color: #3d4555;
   font-size: 16px;
-  font-family: "Roboto", serif !important;
 }
 .add-to-cart {
   font-size: 13px;
-  background-image: linear-gradient(to right, #006600, #6dc81b);
+  background-color: #D68F3C;
   width: fit-content;
   cursor: pointer;
   border: none;
 }
 .product-count {
-  font-family: "Roboto", serif !important;
   border: 2px solid #bcbcbc;
   font-size: 16px;
   color: #3d4555 !important;
@@ -65,7 +58,6 @@
 
 .CustomerReview {
   font-size: 16px;
-  font-family: "Roboto", serif !important;
   color: #3d4555;
 }
 
