--- a/delicious-sweet/styles/pagesStyle/product/thirdSectionP.css
+++ b/delicious-sweet/styles/pagesStyle/product/thirdSectionP.css
@@ -1,8 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-
-* {
-  font-family: "Barlow Condensed", serif !important;
-}
 
 .bar{
     background-color:#E2F6DE;
@@ -13,7 +8,7 @@
     position: absolute;
     width: 100%;
     height: 5px;
-    background-color: #42A111;
+    background-color: #D68F3C;
     bottom: 0;
 }
 
@@ -29,7 +24,6 @@
     color: white;
 }
 .thirdInformation{
-    font-family: "Roboto", serif !important;
     font-size: 16px;
     color: #3D4555;
 }
