--- a/styles/pagesStyle/product/heroSectionP.css
+++ b/styles/pagesStyle/product/heroSectionP.css
@@ -16,7 +16,7 @@
 
 .productHeaderBTN {
   font-size: 20px;
-  background-color: #D68F3C;
+  background-color: #173fffba;
   width: fit-content;
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.3);
   cursor: pointer;
