--- a/styles/pagesStyle/register.css
+++ b/styles/pagesStyle/register.css
@@ -2,7 +2,7 @@
     border:1px solid rgb(216, 216, 216) !important;
 }
 .register .btn-submit:hover{
-    border:1px solid #D68F3C;
+    border:1px solid #173fffba;
 }
 
 .register .btn-icon:hover{
