--- a/styles/pagesStyle/cart/lastPartCart.css
+++ b/styles/pagesStyle/cart/lastPartCart.css
@@ -1,6 +1,6 @@
 
 .couponButtun {
-  background-color: #d68f3c;
+  background-color: #173fffba;
   width: fit-content;
   font-size: 16px;
   cursor: pointer;
@@ -53,7 +53,7 @@
 }
 
 .numbersColorGreen {
-  color: #d68f3c;
+  color: #173fffba;
 }
 
 .numbersColorGray {
@@ -61,7 +61,7 @@
 }
 
 .checkOut {
-  background-color: #d68f3c;
+  background-color: #173fffba;
   font-size: 16px;
   width: fit-content;
   text-decoration: none !important;
