--- a/styles/pagesStyle/home/flashSales.module.css
+++ b/styles/pagesStyle/home/flashSales.module.css
@@ -18,7 +18,7 @@
 
 .cardPrice {
   font-size: 16px;
-  color: #D68F3C;
+  color: #173fffba;
 }
 
 .cardImg {
@@ -29,7 +29,7 @@
   transition: 0.3s;
 }
 .likes:hover {
-  background-color: #D68F3C !important;
+  background-color: #173fffba !important;
 }
 .likes:hover svg path {
   color: white !important;
@@ -41,8 +41,8 @@
   transition: 0.3s ;
 }
 .category:hover {
-  border-color: #D68F3C;
-  background-color: #D68F3C;
+  border-color: #173fffba;
+  background-color: #173fffba;
   .cardTitle {
     color: white;
   }
@@ -55,7 +55,7 @@
   font-size: 30px;
 }
 .discountPrice {
-  background-color: #D68F3C;
+  background-color: #173fffba;
   height: fit-content;
   color: white;
   font-size: 12px;
@@ -65,7 +65,7 @@
 .viewProducts {
   font-size: 16px;
   font-weight: 500;
-  background-color: #D68F3C;
+  background-color: #173fffba;
   color: white;
   text-decoration: none;
 }
@@ -120,7 +120,7 @@
 }
 
 .flashArrow:hover{
-  background-color: #D68F3C;
+  background-color: #173fffba;
 }
 .flashArrow:hover svg path {
   color: white !important;
