--- a/styles/pagesStyle/login.css
+++ b/styles/pagesStyle/login.css
@@ -49,7 +49,7 @@
   .sign-up-btn {
     text-decoration: none;
     font-size: 14px;
-    color: #D68F3C;
+    color: #173fffba;
   }
   
   .side-panel-design {
@@ -57,7 +57,7 @@
     height: 100vh;
     padding-left: 20px;
     padding-block: 50px;
-    background-color: #D68F3C;
+    background-color: #173fffba;
     display: flex;
     align-items: start;
     flex-direction: column;
@@ -70,7 +70,7 @@
     left: -100%;
     width: 100%;
     height: 100%;
-    background-color: #D68F3C;
+    background-color: #173fffba;
     z-index: 0;
     transition: left 0.3s ease, right 0.3s ease;
   }
@@ -109,10 +109,10 @@
     padding-block: 8px;
     border-radius: 100px;
     cursor: pointer;
-    background-color: #D68F3C;
+    background-color: #173fffba;
   }
   .sign-in-btn:hover {
-    background-color: #D68F3C;
+    background-color: #173fffba;
   }
   .logLabel{
     font-size: 16px;
@@ -131,7 +131,7 @@
   }
   .customLogoLog{
     border-radius: 50%;
-    background-color: #D68F3C;
+    background-color: #173fffba;
     border: 5px solid white;
     box-shadow: 0 0px 6px rgba(0, 0, 0, 0.288);;
     z-index: 10;
@@ -163,7 +163,7 @@
     }
   }
   .form-header h2 {
-    color: #D68F3C;
+    color: #173fffba;
   }
   .form-container {
     /* width: 50%; */
@@ -216,7 +216,7 @@
     font-size: 12px;
   }
   input:focus {
-    outline-color:#D68F3C ;
+    outline-color:#173fffba ;
     border: none;
   }
   .sign-container {
@@ -262,7 +262,7 @@
       width: 100%;
       padding: 35px;
       & p {
-        color: #D68F3C;
+        color: #173fffba;
       }
     }
     .main-container {
