--- a/styles/pagesStyle/nav.module.css
+++ b/styles/pagesStyle/nav.module.css
@@ -1,5 +1,5 @@
 .navLinks {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 24px;
   font-weight: 400;
   color: black !important;
@@ -10,8 +10,8 @@
 .navLinks::after {
   content: "";
   width: 100%;
-  height: 1px;
-  background-color: black;
+  height: 2px;
+  background-color: #173fffba;
   position: absolute;
   bottom: -2px;
   left: 0;
