--- a/styles/pagesStyle/product/secondSectionP.css
+++ b/styles/pagesStyle/product/secondSectionP.css
@@ -29,7 +29,7 @@
 }
 
 .product-price {
-  color: #D68F3C;
+  color: #173fffba;
   font-size: 31px;
 }
 
@@ -39,7 +39,7 @@
 }
 .add-to-cart {
   font-size: 13px;
-  background-color: #D68F3C;
+  background-color: #173fffba;
   width: fit-content;
   cursor: pointer;
   border: none;
@@ -53,7 +53,6 @@
 .star {
   color: #ffa300;
   font-size: 16px;
-  cursor: pointer;
 }
 
 .CustomerReview {
