--- a/styles/pagesStyle/product/thirdSectionP.css
+++ b/styles/pagesStyle/product/thirdSectionP.css
@@ -8,7 +8,7 @@
     position: absolute;
     width: 100%;
     height: 5px;
-    background-color: #D68F3C;
+    background-color: #173fffba;
     bottom: 0;
 }
 
